--- a/style.css
+++ b/style.css
@@ -4,20 +4,19 @@ body {
 
   h1 {
     color: white;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', "Geneva", Verdana, sans-serif;
+    font-family:'Lucida Sans';
 
   }
 
   h2 {
       color: white;
-      font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', "Geneva", Verdana, sans-serif;
-      font-weight: bolder;
+      font-family:'Lucida Sans';
 
   }
 
   p {
     color: white;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', "Geneva", Verdana, sans-serif;
+    font-family:'Lucida Sans';
     font-size: large;
   }
 
@@ -25,7 +24,7 @@ body {
     color: black;
     background-color: transparent;
     text-decoration: none;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', "Geneva", Verdana, sans-serif;
+    font-family:'Lucida Sans';
 
   }
   
@@ -33,7 +32,7 @@ body {
     color: pink;
     background-color: transparent;
     text-decoration: none;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', "Geneva", Verdana, sans-serif;
+    font-family:'Lucida Sans';
 
   }
   
@@ -41,7 +40,7 @@ body {
     color: white;
     background-color: transparent;
     text-decoration: underline;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', "Geneva", Verdana, sans-serif;
+    font-family:'Lucida Sans';
 
   }
   
@@ -49,6 +48,6 @@ body {
     color: yellow;
     background-color: transparent;
     text-decoration: underline;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', "Geneva", Verdana, sans-serif;
+    font-family:'Lucida Sans';
 
   }
